@@ -502,7 +502,10 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 3990) Use existing session name if session.auto_start is on
   Fixes checks for open sessions, such as the cookie warning on login.
   Patch by Zbigniew Braniecki.
-
+* Add cache-safe alternate sitenotice for anonymous users. (MediaWiki:Anonnotice)
+  This is displayed instead of the regular sitenotice, if it exists. If not, the
+  regular sitenotice shows. If that doesn't exist, the value of $wgSiteNotice is used,
+  and if that's null, then nothing is shown.
 
 === Caveats ===
 
